# write

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
installer/: write.iss
src/: app.rs  config.rs  editor.rs  keybindings.rs  main.rs  platform.rs  theme.rs  ui.rs
src/llm/: claude.rs  mod.rs  openai.rs  openrouter.rs  prompt.rs
