[package]
name = "write"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Write"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tui-textarea = { version = "0.7", features = ["crossterm"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
dirs = "6"
sha2 = "0.10"
anyhow = "1"

[build-dependencies]
winresource = "0.1"
